tests/auto/qmlls/utils/data/highlights/invalid/highlightsShift_del2.qml
import QtQuick
Ite
    width: 100
    Rectangle {
        width: 100
        height: 100
    }
}
